# src/routes/index.ts
@@ -3,5 +3,6 @@ import Event from "./event";
 import Project from "./project";
 import Student from "./student";
 import Member from "./member";
+import Core from "./core";
 
-export { Person, Project, Event, Student, Member };
+export { Person, Project, Event, Student, Member, Core };
